Calculamos o erro entre a integral verdadeira e a calculada pela regra dos retângulos e respondemos a pergunta sobre o erro

--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -200,8 +200,7 @@
     "    soma = soma + dado\n",
     "# Calculamos a integral pelo metodo dos retangulos e imprimimos o resultado\n",
     "integral = soma*intervalo\n",
-    "print(integral)\n",
-    "    "
+    "print(integral)"
    ]
   },
   {
@@ -218,12 +217,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "-0.015942894513249595\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Como a integral de a até b de cos(t)dt é igual a sin(b) - sin(a), calculamos a solução analítica para a integral e a imprimimos\n",
+    "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
+    "print(int_verdadeira)\n",
+    "# Calculamos o erro cometido e o imprimimos\n",
+    "erro = int_verdadeira - integral\n",
+    "print(erro)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +251,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Porque a regra do retângulo é uma aproximação da integral verdadeira, e não igual a ela, e por isso o resultado não é zero. Quanto menor o intervalo entre os dados, ou seja, quanto maior o número de dados num mesmo período, menor será o erro pois maior será o número de retângulos e de áreas calculadas, e assim menor serão as áreas dos retângulos so"
+   ]
   },
   {
    "cell_type": "markdown",
