--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A área dos retângulos é igual ao somatório de i=1 até N da multiplicação do intervalo entre os dados (Δ) e a altura do retângulo na posição i (di)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +153,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEPCAYAAABGP2P1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHPlJREFUeJzt3X+QVPWZ7/H3AwKDyC8RMQukNA24yA3GJKArwek1Oo1O\nSpPsFhQJm6DZWiKRMVVXN2r5Y7z3qvF691ZmSIqwQoyrq95aois7447ELIOGa1QUlQAqzOoKmDWG\nuKt45Vf53D+6Z9I9091zuqdP9+nuz6uqyz7dhzMPjaef+Z7nOd+vuTsiIiK9hlU6ABERiRYlBhER\nyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMoSYGM/uJmb1jZjvy7NNuZnvM7GUzOyfMeEREZHBhjxju\nBRbletPMLgVmuPtM4K+ANSHHIyIigwg1Mbj708B7eXa5DLgvte+zwAQzmxJmTCIikl+lawxTgX1p\n2/uBaRWKRUREqHxiALB+25qjQ0Skgk6o8M8/AExP256Wei2DmSlZiIgUwd37//I9qEqPGDYC3wAw\ns/OA/3D3d/L9gUQiQVNTU9b3Jk2alPPPNDY2Zn2vsbEx53sTJ07MeTx3p6Ojg6amJhobG2lqamLp\n0qW4e+Qft956a8VjqJU4qyFGxVm/cRYr1BGDmT0ENAKnmNk+4FZgBIC7r3X3x83sUjPbC3wIXJHv\neLFYjFWrVgHQ09NDT09PxnvLli3jgQceGPD6qlWraG9vz3rMhoaGgj/Aw4cP09nZyTXXXJPxsyZO\nnEhnZyfNzc10dnbS3t7OkSNHGDVqFC0tLTQ3Nxf0c0REKiHUxODuSwPsc3WQYyUSCVatWpXx5bp6\n9WoOHz5MQ0ND33vz5s3L+jpkTyb5Es24ceN4772BTVUNDQ20t7dn7A/w3nvvsXr1aoABSaP3uZKD\niERepYc6AYdDXgodHR2eSCS8sbHRE4mEd3R05H2vo6PDY7GYkyyIO+CxWMw7Ojq8sbEx4/XeR2Nj\nozc1NWV9L5FI9P2spqamvn3T4yiHzZs3l/XnFasa4qyGGN0VZ6lVS5yp786Cv3PNh3AdqlzMzCsV\nZ2dnZ9YRSCKRYNOmTQP2TyQSHD58mC1btgx4r7Gxkeuuu27AaCIWi9HW1qbRhIiUlJnhRRSflRiK\nlK3G0PsF397enjNpuHvO93prIapLiEgpFJsYKt2uWrV6v7ALrWfcfffdWY+3f/9+1SVEJBI0YghJ\noZegJk2axMGDBwe8nkgk6OrqUpeTiBRMI4aIaW5uzvrF3dLSknU0MXr06KyJIVdrrEYTIhIWjRgq\nINtooti6hEYTIpKLRgxVJNdootC6hEYTIhIGjRgipJjW2MFGEyJSvzRiqAGF1iWCjCZ0iUlECqXE\nUAXytcbmmgPq/fff1yUmESmKLiVVuVw32o0bN47t27cP2F+XmETqhy4l1alco4l8l5gAXWYSkZyU\nGGpAttpEvmnG1ckkIvlUeqEeCUlLSwuxWCzjtfS1KfpPGd7T09M3ZbiI1DeNGGpUvoK1LjOJSD5K\nDDUsV/vrqFGjsu6vy0wiArqUVJd0mUlE8tGIoQ7pMpOI5KPEUKd0mUlEctGlJMmgy0wiohGDZCj2\nMpMuMYnUDiUGGaDQy0yal0mktuhSkgSW6zIToEtMIjVEIwYJrNh5mUSkuigxSEEKnZcJ1OIqUm2U\nGGTI8i0kpBZXkeqj9RikJIpZllTrQoiES+sxSEXl6mQ6cuRI1v1VfxCJLnUlSajy3UkNyZFGIpEg\nHo+TSCTo7OwsZ3gikoVGDBIq1R9Eqo9qDBI61R9EKkM1Boks1R9EqotqDFIxg83kqtqDSGVoxCAV\nk6v+cN5556n2IFJBqjFIRWWrP7S3t6v2IFICxdYYQk0MZrYI+AEwHFjn7nf1e/8U4AHgNJKjl//l\n7j/NchwlhjoSj8fZsmXLgNcbGxvp7u4uf0AiVarYxBBajcHMhgM/BBYBZwFLzWx2v92uBra7+2eA\nOPA3ZqbLW3VO9z6IVFaYX8Lzgb3u/iaAmT0MXA7sTtvnN8Dc1PNxwEF3Px5iTFIFdO+DSGWFmRim\nAvvStvcD5/bb5x7gX8zsbWAssDjEeKRK5FtFLpFI5Fz7QYlBpDTCTAxBigI3Ai+5e9zMYsDPzexs\nd/+g/46tra19z+PxOPF4vFRxSgTp3geRwnV3d5ekDhdmYjgATE/bnk5y1JDufOB2AHfvMbM3gDOB\nbf0Plp4YpH4FqT9o7QepV/1/ab7tttuKOk6YiWEbMNPMTgfeBpYAS/vt8ypwEbDVzKaQTAr/GmJM\nUuVUfxAJX9jtqpfwh3bV9e5+p5mtAHD3tal21XuBT5LskLrT3R/Mchy1q0ofzb0kEkwk72MoFSUG\nCUL3P4hkitx9DCLlNlj9QUSCUWKQmtHS0kIsFst4rbf+ALoxTiQo3WUsNSPf/Q8qTIsEpxqD1AUV\npqUeqcYgkodujBMJTolB6oIK0yLBKTFIXchXmFZRWiSTis9SF3IVpgEVpUX6UfFZ6pqK0lLLVHwW\nKYKK0iIDKTFIXdNqcSIDqcYgdU2ztYoMpBqD1D3N1iq1qtgag0YMUve0WpxIJtUYRHLQTXFSr5QY\nRHIYbLZWkVqlS0kiOeSbrRW0vrTULhWfRYqQrWMpFovR1tam5CCRoRvcRMqovb09IylAspV19erV\nFYpIpHSUGESKoI4lqWVKDCJFUMeS1DIlBpEiaBpvqWXqShIpgqbxllqmriSREtI0GhIl6koSiQAV\npaUWKDGIlJCK0lILlBhESmiwaTRUmJZqoOKzSAnlm0ZD6ztItVDxWaRMVJiWclPxWSTiVJiWaqHE\nIFImKkxLtVBiECkTre8g1ULFZ5Ey0foOUi1UfBaJAK3vIGFQ8Vmkiml9B4mSUBODmS0ys1fNbI+Z\nfS/HPnEz225mvzaz7jDjEYkqdSxJlIRWYzCz4cAPgYuAA8DzZrbR3Xen7TMB+BGQcPf9ZnZKWPGI\nRJk6liRKwhwxzAf2uvub7n4MeBi4vN8+XwN+5u77Adz9dyHGIxJZWt9BoiTMrqSpwL607f3Auf32\nmQmMMLPNwFigzd3vDzEmkUjS+g4SJWEmhiBtRCOAzwJfBE4EnjGzX7n7nhDjEomk5ubmAV/2iUQi\nZ1FaiUHCEmZiOABMT9ueTnLUkG4f8Dt3/wj4yMyeAs4GBiSG1tbWvufxeJx4PF7icEWiR0VpKUR3\ndzfd3d1DPk5o9zGY2QnAayRHA28DzwFL+xWf/5hkgToBjAKeBZa4+65+x9J9DFKXNPGeDEXk7mNw\n9+PA1cATwC7g/7j7bjNbYWYrUvu8CnQBr5BMCvf0Twoi9UzTaEgl6M5nkYjr7OzUNBpSlGJHDEoM\nIlVK02jIYCJ3KUlEwqVpNCQsSgwiVUodSxIWJQaRKqVpNCQsSgwiVUodSxKWQW9wM7MvAC+5+yEz\n+wvgHJJTV/xb6NGJSE5a+EfCMmhXkpntAOamHj8F1gGL3b0x9Oj+EIO6kkQKoI4lgXC7ko6nvpW/\nDPzI3X9EcsI7EYkodSzJUASZK+kDM7sRWAYsTK2zMCLcsERkKNSxJEMRZMSwBDgCXOnu/05yOu27\nQ41KRIZEHUsyFIMmBnf/DfD3wAQz+xJw2N3/LvTIRKRo6liSoQhSfF5McoSwJfXSBcB17v4PIceW\nHoOKzyIF0hxLEtpcSWb2CnCRu/82tT0Z+IW7zy0q0iIoMYiUjjqW6keYXUkGvJu2fTD1mohUIXUs\nyWCCdCV1AU+Y2YMkE8IS4J9DjUpEQqOOJRlMkMTw18BXgS+QXMd5rbs/GmpUIhIadSzJYAZNDKmL\n+z9LPUSkyrW0tNDT0zOgxqCOJemVMzGY2SGSI4Rs3N3HhROSiIQp3xxL6lYSyJMY3P0kADP7H8Db\nwAOpt74O/FH4oYlIWJqbmwd84WfrVup9ruRQXwK1q/ZvTc32WpjUrioSvkQiwaZNm7K+3tXVVYGI\nZKjCbFf90MyWmdnw1OPrwKHCQxSRKFO3kvQKkhi+BiwG3kk9FqdeE5Eaom4l6RWkK+kN4LIyxCIi\nFaRuJekVZAW30cC3gLOAvl8d3P3KEOMSkTIbbEU4qR9Bis8bgN0ku5FuI7kuw253bwk/vL4YVHwW\nqTC1slafYovPQe58nuHuf25ml7v7fampMX5ZeIgiUq3UylpfghSfj6b++59m9mlgAjA5vJBEJGo0\n8V59CTJi+FszOxm4CXiM5HrPN4calYhEilpZ60u+KTH+a9rmcpIzq/4otX1iiDGJSMSolbW+5LuU\nNBY4CfgccBXJaTD+CFgBfDb80EQkKrRUaH0J0pX0NHCpu3+Q2h4LPO7uC8sQX28M6koSqTAtFVp9\nwuxKOhU4lrZ9LPWaiNSRbBPvgTqWalGQrqS/A54zs1Yzuw14Frgv3LBEpFqoY6n2BJkS43Yz6wIW\nklyfYbm7bw89MhGpCupYqj1BLiXh7i8AL4Qci4hUIXUs1Z4gl5JERHJSx1LtCTRiKJaZLQJ+AAwH\n1rn7XTn2mwc8Ayx290fCjElESktLhdaeQdtViz6w2XDgNeAi4ADwPLDU3Xdn2e/nwP8D7nX3n2U5\nltpVRapMtm6lWCxGW1ubkkOZhLmCW7HmA3vd/U13PwY8DFyeZb9VwAbg3RBjEZEyU7dS9QozMUwF\n9qVt70+91sfMppJMFmtSL2lYIFIj1K1UvcJMDEG+5H8AXJ+6TmSph4jUAHUrVa8wi88HgOlp29NJ\njhrSfQ542MwATgEuMbNj7r6x/8FaW1v7nsfjceLxeInDFZFS0lKh5dfd3U13d/eQjxNm8fkEksXn\nLwJvA8+Rpfictv+9wD9l60pS8VmkOuWbX0nCV2zxObTEAGBml/CHdtX17n6nma0AcPe1/fZVYhCp\nI2plDV8kE0OpKDGI1Ba1spZHFNtVRUSyUitrtCkxiEjZqZU12pQYRKTs1MoabUoMIlJ2mngv2kKd\nRE9EJJt8E+9J5akrSUQiR62spRHmms8iImWjNaQrTzUGEYkUtbJWnhKDiESKWlkrT4lBRCJFrayV\np8QgIpGiVtbKU/FZRCJlsFZWdSyFT+2qIlI1NPleYTSJnojUPHUslYcSg4hUDXUslYcSg4hUDXUs\nlYcSg4hUDXUslYe6kkSkamjyvfJQV5KI1AS1sQ6kSfREpG5p4r3SUo1BRKqe2lhLS4lBRKqe2lhL\nS4lBRKqe2lhLS4lBRKqe2lhLS8VnEal6amMtLbWrikjNq9dWVrWriohkoVbWwqnGICI1Ta2shVNi\nEJGaplbWwikxiEhNUytr4ZQYRKSmqZW1cCo+i0hNUytr4dSuKiJ1rZZbWdWuKiJSILWyZqcag4jU\nLbWyZqfEICJ1S62s2YWeGMxskZm9amZ7zOx7Wd7/upm9bGavmNlWM5sbdkwiIqBW1lxCTQxmNhz4\nIbAIOAtYamaz++32r8AF7j4X+O/A34YZk4hIL7WyZhd28Xk+sNfd3wQws4eBy4HdvTu4+zNp+z8L\nTAs5JhERQK2suYSdGKYC+9K29wPn5tn/W8DjoUYkIpKmubk5ayKo5TbWwYSdGALffGBmfwpcCSzI\n9n5ra2vf83g8TjweH2JoIiLZVWsba3d3N93d3UM+Tqg3uJnZeUCruy9Kbd8AfOzud/Xbby7wCLDI\n3fdmOY5ucBORskkkEmzatCnr611dXRWIqDjF3uAWdlfSNmCmmZ1uZiOBJcDG9B3M7JMkk8KybElB\nRKTc6r2NNdRLSe5+3MyuBp4AhgPr3X23ma1Ivb8WuAWYCKwxM4Bj7j4/zLhERPKp9zZWzZUkItJP\nthpDLBajra0t0jWG/jRXkohIidR7G6tGDCIiBaqWVlaNGEREyqBaW1kLoUn0REQKUA8zsioxiIgU\noB5aWZUYREQKUA+trEoMIiIFqIcZWdWVJCIlkbpBVSog1/ejupJEpOL0C1z5hZGQdSlJREQyKDGI\niEgGJQYREcmgxCAiIhmUGEREsmhtbWXmzJlDOsby5cu5+OKLSxRR+SgxiIjkUIqOn2ps41ViEBHJ\noRTtt9XYwqvEICJl0dnZSSKRIB6Pk0gk6OzsjMzxDh8+zFVXXcWECRM4+eSTWblyZcacSC+++CKX\nXHIJU6ZMYezYscyfP58nnngi4xi///3vWbJkCSeddBKnnXYaN99884CkcOzYMa6//nqmTZvGqFGj\nmDNnDg899FDGPuvWrWP27NmMHj2aSZMm0djYyIEDB4r+uxXF3SP/SIYpIlGW7zzt6OjwWCzmQN8j\nFot5R0dHUT+r1Mf77ne/66eeeqpv3LjRX3vtNb/22mt93LhxPnPmTHd37+7u9vvuu8937drle/bs\n8ZtuuslHjhzpr7/+et8xvvzlL/vMmTN98+bNvnPnTl+2bJmPGzfOL7744r59rr32Wp80aZJv2LDB\n9+zZ43fccYcPGzbMf/GLX7i7+7Zt2/yEE07w+++/39966y3fsWOHr1+/3vfv358z9nyfe+q9wr9z\ni/lD5X4oMYhEX77ztKmpKeNLvPeRSCSK+lmlPN6hQ4e8oaHB161bl/H65z//+b7EkM3ZZ5/tt99+\nu7u779mzx83Mn3zyyb73jx496lOnTu1LDB9++KGPGjXK16xZk3Gcr3zlK37hhRe6u/sjjzzi48eP\n9/fffz9w/GEkBl1KEpHQlXqq6lIer6enhyNHjnD++ednvL5gwYK+S0HvvvsuK1euZPbs2UycOJGx\nY8eyc+dO3nrrLQB27doFkHGMESNGMG/evL7tvXv3cvToUS644IKMn3PBBRewc+dOAJqamvjUpz7F\nGWecwdKlS7nnnns4ePBgwX+noVJiEJHQlXqq6nJNfd3bUbR8+XK2bt3K3XffzS9/+UteeuklPvOZ\nz3D06NG8f743sQQ1ZswYtm3bxqOPPsqsWbP48Y9/zIwZM3jxxReL/jsUQ4lBREJX6qmqS3m8WCzG\nyJEj2bp1a8br6dtPP/00K1eu5Etf+hJz5szhtNNOy1jF7ayzzhrwZ44ePcrzzz/ftz1jxgxGjRrF\nli1bMn7Oli1b+PSnP923PWzYMBYuXMhtt93GCy+8wCc+8QkefPDBgv9eQ6HZVUUkdL1rIa9evZrD\nhw/T0NDAqlWril4juZTHGzNmDN/+9re56aabmDJlCrNmzWL9+vW8/vrrTJkyBYAzzzyTBx54gAUL\nFnD8+HFuueUWPv74474RwYwZM7jsssv4zne+w9q1azn11FP5/ve/z6FDh/r2OfHEE2lpaeHmm29m\n8uTJzJ07lw0bNrBx40aefPJJAB577DHeeOMNFi5cyOTJk3nhhRfYt28fc+bMKepzKloxhYlyP1Dx\nWSTyqvk8/eijj3zFihU+fvx4Hz9+vK9YscJvuOGGvuLzjh07/Pzzz/fRo0f7GWec4WvWrPGLLrrI\nr7jiir5jHDx40BcvXuxjxozxyZMn+4033ujf/OY3M7qSjh075tdff71PnTrVR44c6XPmzPGHHnqo\n7/2nnnrKL7zwQp88ebI3NDT4rFmz/K677sobe77PnSKLz1qoR0RKIrUoTKXDqDv5PvdiF+pRjUFE\nRDIoMYiISAYlBhERyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMSgwiIpJBU2KISMlU4zKWMpBGDCJS\nEsVMvaBH/kdTU1PWzzqRSPSfNqikQk0MZrbIzF41sz1m9r0c+7Sn3n/ZzM4JMx4RkWpS6llpgwot\nMZjZcOCHwCLgLGCpmc3ut8+lwAx3nwn8FbAmrHjKobu7u9IhBKI4S6caYgTFWWrlirO5uZm2tjYS\niQSNjY0kEgna2tqKnpU2qDBHDPOBve7+prsfAx4GLu+3z2XAfQDu/iwwwcymhBhTqPQ/dWlVQ5zV\nECMozlIrZ5zNzc10dXXR3d1NV1dXRlLo7OwkkUgQj8dJJBJ0dnaW5GeGWXyeCuxL294PnBtgn2nA\nOyHGJSJS9To7O7nmmmsyFgzqfT7UEUWYI4agFZH+bQyat1dEZBDt7e0ZSQGSiWH16tVDPnZo6zGY\n2XlAq7svSm3fAHzs7nel7fNjoNvdH05tvwo0uvs7/Y6lZCEiUoRi1mMI81LSNmCmmZ0OvA0sAZb2\n22cjcDXwcCqR/Ef/pADF/cVERKQ4oSUGdz9uZlcDTwDDgfXuvtvMVqTeX+vuj5vZpWa2F/gQuCKs\neEREJJiqWNpTRETKJ1J3PlfLDXGDxWlmX0/F94qZbTWzuVGLMW2/eWZ23My+Ws740n5+kH/zuJlt\nN7Nfm1l3mUPsjWGwf/NTzKzLzF5Kxbm8AjH+xMzeMbMdefaJwvmTN84onD+pOAb9PFP7VfocCvLv\nXtg5VOlbvtNu6R4O7AVOB0YALwGz++1zKfB46vm5wK8iGuefAONTzxeVO84gMabt9y9AB/BnEf0s\nJwA7gWmp7VMiGmcrcGdvjMBB4IQyx7kQOAfYkeP9ip8/AeOs6PkTNM60/zcqdg4F/DwLPoeiNGKo\nlhviBo3T3Z9x9/9MbT5L8t6MSMWYsgrYALxbzuDSBInza8DP3H0/gLv/rswxQrA4fwOMSz0fBxx0\n9+NljBF3fxp4L88uUTh/Bo0zAudPbxyDfZ5Q+XMoSJwFn0NRSgzZbnabGmCfcv9PEyTOdN8CHg81\nooEGjdHMppL8cuudhqQSxaYgn+VM4GQz22xm28zsL8oW3R8EifMeYI6ZvQ28DFxTptgKEYXzp1CV\nOH8Cicg5FETB51CUpt2ulhviAv88M/tT4EpgQXjhZBUkxh8A17u7W3Ku5Eq0BAeJcwTwWeCLwInA\nM2b2K3ffE2pkmYLEeSPwkrvHzSwG/NzMznb3D0KOrVCVPn8Cq+D5E1QUzqEgCj6HopQYDgDT07an\nk/yNJt8+01KvlVOQOEkVzO4BFrn7YMPRUgsS4+dI3j8CyWvil5jZMXffWJ4QgWBx7gN+5+4fAR+Z\n2VPA2UA5E0OQOM8Hbgdw9x4zewM4k+T9PFERhfMnkAqfP0FF4RwKovBzqBLFkhwFkhOAHpIFvpEM\nXnw+j8oUn4PE+UmSxcrzovpZ9tv/XuCrUYwT+GPgSZJFvhOBHcBZEYzzfwO3pp5PIZk4Tq7AZ3o6\nwYrPFTl/AsZZ0fMnaJz99qvIORTw8yz4HIrMiMGr5Ia4IHECtwATgTWp3yaOufv8iMVYcQH/zV81\nsy7gFeBj4B533xW1OIE7gHvN7GWStbu/dvfflzNOM3sIaAROMbN9wK0kLyNE5vwJEicVPn8KiDMS\nAvy7F3wO6QY3ERHJEKWuJBERiQAlBhERyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMSgxSl8xsvJld\nVek4RKJIiUHq1URgZaWDEIkiJQapV98HYqnFS/6nmV1rZs+lFohpBTCz01OL89xrZq+Z2d+bWVNq\n8ZjXzWxear9WM7vfzP5v6vW/TL1uZna3me1ILTqzOPX6J8zsqdTP3mFmX6jUhyCSTWSmxBAps+8B\nc9z9HDNrIrnIynwzGwY8ZmYLSU4+FgP+DNgFPA8scfcFZnYZyRlVv5I63n8hOf/QScB2M+skObHe\n2cBcYDLwfGoCs68BXe5+R2pWzjFl+juLBKLEIPUqfYrkJqDJzLantscAM0gmhjfcfSeAme0kORkZ\nwK9JTlwGyamrH3P3I8ARM9tMcnGfBcCDnpx35rdmtgWYBzwH/MTMRgD/6O4vh/R3FCmKLiWJJN3p\n7uekHrPc/d7U60fS9vkYOJr2PN8vVr2TkA1Y/8CTK24tJDnl9U8rtPiQSE5KDFKvPgDGpp5vAq40\nszGQXJnLzCYXcCwDLjezUWY2CYiTHBU8DSwxs2Gp410APGdmnwTedfd1wDqS6/WKRIYuJUldcveD\nqSLyDuCfgQdJrmwFyaSxjORv/f2nH/Ysz53klMabSS7Y8t/c/d+BR83sT0gu9enAde7+WzP7BnCd\nmR1L/axvhPF3FCmWpt0WGSIzuxU45O5/U+lYREpBl5JESkO/YUnN0IhBREQyaMQgIiIZlBhERCSD\nEoOIiGRQYhARkQxKDCIikkGJQUREMvx/z40EZFjSnpAAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x51549b0>"
+       "<matplotlib.figure.Figure at 0x56bf470>"
       ]
      },
      "metadata": {},
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -252,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Porque a regra do retângulo é uma aproximação da integral verdadeira, e não igual a ela, e por isso o resultado não é zero. Quanto menor o intervalo entre os dados, ou seja, quanto maior o número de dados num mesmo período, menor será o erro pois maior será o número de retângulos e de áreas calculadas, e assim menor serão as áreas dos retângulos so"
+    "Porque a regra do retângulo é uma aproximação da integral verdadeira, e não igual a ela, e por isso o resultado não é zero. Quanto menor o intervalo entre os dados, ou seja, quanto maior o número de dados num mesmo período, menor será o erro pois maior será o número de retângulos e de áreas calculadas, e assim menor serão as áreas dos retângulos sobrando e faltando em relação à área abaixo da curva."
    ]
   },
   {
@@ -289,7 +291,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A área dos trapézios é igual ao somatório de i=1 até N-1 da multiplicação do intervalo entre os dados (Δ) pela soma da altura de dois pontos adjacentes (di + di+1) dividido por 2."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,9 +306,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999143605663638\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculamos a soma de todos os di com di+1 \n",
+    "soma = 0\n",
+    "for i in range(0, N - 1):\n",
+    "    soma = soma + dados[i] + dados[i+1]    \n",
+    "# Calculamos a integral pelo metodo dos trapezios e imprimimos o resultado\n",
+    "int_trapezios = (soma*intervalo)/2\n",
+    "print(int_trapezios)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -318,12 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "8.563943363615323e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Como a integral de a até b de cos(t)dt é igual a sin(b) - sin(a), calculamos a solução analítica para a integral e a imprimimos\n",
+    "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
+    "print(int_verdadeira)\n",
+    "# Calculamos o erro cometido e o imprimimos\n",
+    "erro2 = int_verdadeira - int_trapezios\n",
+    "print(erro2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,7 +380,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O erro é 3 ordens de grandeza menor, pois a regra dos trapézios dá uma aproximação melhor já que não há áreas sobrando acima da curva e as áreas faltando abaixo da curva são muito menores, se aproximando mais do traçado original da curva. Sim, pelos motivos descritos anteriormente."
+   ]
   },
   {
    "cell_type": "markdown",
