Terminamos a comparação dos dois métodos, sem os comentários, e consertamos o cálculo dos erros inserindo o módulo

--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -153,7 +153,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEPCAYAAABGP2P1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHPlJREFUeJzt3X+QVPWZ7/H3AwKDyC8RMQukNA24yA3GJKArwek1Oo1O\nSpPsFhQJm6DZWiKRMVVXN2r5Y7z3qvF691ZmSIqwQoyrq95aois7447ELIOGa1QUlQAqzOoKmDWG\nuKt45Vf53D+6Z9I9091zuqdP9+nuz6uqyz7dhzMPjaef+Z7nOd+vuTsiIiK9hlU6ABERiRYlBhER\nyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMoSYGM/uJmb1jZjvy7NNuZnvM7GUzOyfMeEREZHBhjxju\nBRbletPMLgVmuPtM4K+ANSHHIyIigwg1Mbj708B7eXa5DLgvte+zwAQzmxJmTCIikl+lawxTgX1p\n2/uBaRWKRUREqHxiALB+25qjQ0Skgk6o8M8/AExP256Wei2DmSlZiIgUwd37//I9qEqPGDYC3wAw\ns/OA/3D3d/L9gUQiQVNTU9b3Jk2alPPPNDY2Zn2vsbEx53sTJ07MeTx3p6Ojg6amJhobG2lqamLp\n0qW4e+Qft956a8VjqJU4qyFGxVm/cRYr1BGDmT0ENAKnmNk+4FZgBIC7r3X3x83sUjPbC3wIXJHv\neLFYjFWrVgHQ09NDT09PxnvLli3jgQceGPD6qlWraG9vz3rMhoaGgj/Aw4cP09nZyTXXXJPxsyZO\nnEhnZyfNzc10dnbS3t7OkSNHGDVqFC0tLTQ3Nxf0c0REKiHUxODuSwPsc3WQYyUSCVatWpXx5bp6\n9WoOHz5MQ0ND33vz5s3L+jpkTyb5Es24ceN4772BTVUNDQ20t7dn7A/w3nvvsXr1aoABSaP3uZKD\niERepYc6AYdDXgodHR2eSCS8sbHRE4mEd3R05H2vo6PDY7GYkyyIO+CxWMw7Ojq8sbEx4/XeR2Nj\nozc1NWV9L5FI9P2spqamvn3T4yiHzZs3l/XnFasa4qyGGN0VZ6lVS5yp786Cv3PNh3AdqlzMzCsV\nZ2dnZ9YRSCKRYNOmTQP2TyQSHD58mC1btgx4r7Gxkeuuu27AaCIWi9HW1qbRhIiUlJnhRRSflRiK\nlK3G0PsF397enjNpuHvO93prIapLiEgpFJsYKt2uWrV6v7ALrWfcfffdWY+3f/9+1SVEJBI0YghJ\noZegJk2axMGDBwe8nkgk6OrqUpeTiBRMI4aIaW5uzvrF3dLSknU0MXr06KyJIVdrrEYTIhIWjRgq\nINtooti6hEYTIpKLRgxVJNdootC6hEYTIhIGjRgipJjW2MFGEyJSvzRiqAGF1iWCjCZ0iUlECqXE\nUAXytcbmmgPq/fff1yUmESmKLiVVuVw32o0bN47t27cP2F+XmETqhy4l1alco4l8l5gAXWYSkZyU\nGGpAttpEvmnG1ckkIvlUeqEeCUlLSwuxWCzjtfS1KfpPGd7T09M3ZbiI1DeNGGpUvoK1LjOJSD5K\nDDUsV/vrqFGjsu6vy0wiArqUVJd0mUlE8tGIoQ7pMpOI5KPEUKd0mUlEctGlJMmgy0wiohGDZCj2\nMpMuMYnUDiUGGaDQy0yal0mktuhSkgSW6zIToEtMIjVEIwYJrNh5mUSkuigxSEEKnZcJ1OIqUm2U\nGGTI8i0kpBZXkeqj9RikJIpZllTrQoiES+sxSEXl6mQ6cuRI1v1VfxCJLnUlSajy3UkNyZFGIpEg\nHo+TSCTo7OwsZ3gikoVGDBIq1R9Eqo9qDBI61R9EKkM1Boks1R9EqotqDFIxg83kqtqDSGVoxCAV\nk6v+cN5556n2IFJBqjFIRWWrP7S3t6v2IFICxdYYQk0MZrYI+AEwHFjn7nf1e/8U4AHgNJKjl//l\n7j/NchwlhjoSj8fZsmXLgNcbGxvp7u4uf0AiVarYxBBajcHMhgM/BBYBZwFLzWx2v92uBra7+2eA\nOPA3ZqbLW3VO9z6IVFaYX8Lzgb3u/iaAmT0MXA7sTtvnN8Dc1PNxwEF3Px5iTFIFdO+DSGWFmRim\nAvvStvcD5/bb5x7gX8zsbWAssDjEeKRK5FtFLpFI5Fz7QYlBpDTCTAxBigI3Ai+5e9zMYsDPzexs\nd/+g/46tra19z+PxOPF4vFRxSgTp3geRwnV3d5ekDhdmYjgATE/bnk5y1JDufOB2AHfvMbM3gDOB\nbf0Plp4YpH4FqT9o7QepV/1/ab7tttuKOk6YiWEbMNPMTgfeBpYAS/vt8ypwEbDVzKaQTAr/GmJM\nUuVUfxAJX9jtqpfwh3bV9e5+p5mtAHD3tal21XuBT5LskLrT3R/Mchy1q0ofzb0kEkwk72MoFSUG\nCUL3P4hkitx9DCLlNlj9QUSCUWKQmtHS0kIsFst4rbf+ALoxTiQo3WUsNSPf/Q8qTIsEpxqD1AUV\npqUeqcYgkodujBMJTolB6oIK0yLBKTFIXchXmFZRWiSTis9SF3IVpgEVpUX6UfFZ6pqK0lLLVHwW\nKYKK0iIDKTFIXdNqcSIDqcYgdU2ztYoMpBqD1D3N1iq1qtgag0YMUve0WpxIJtUYRHLQTXFSr5QY\nRHIYbLZWkVqlS0kiOeSbrRW0vrTULhWfRYqQrWMpFovR1tam5CCRoRvcRMqovb09IylAspV19erV\nFYpIpHSUGESKoI4lqWVKDCJFUMeS1DIlBpEiaBpvqWXqShIpgqbxllqmriSREtI0GhIl6koSiQAV\npaUWKDGIlJCK0lILlBhESmiwaTRUmJZqoOKzSAnlm0ZD6ztItVDxWaRMVJiWclPxWSTiVJiWaqHE\nIFImKkxLtVBiECkTre8g1ULFZ5Ey0foOUi1UfBaJAK3vIGFQ8Vmkiml9B4mSUBODmS0ys1fNbI+Z\nfS/HPnEz225mvzaz7jDjEYkqdSxJlIRWYzCz4cAPgYuAA8DzZrbR3Xen7TMB+BGQcPf9ZnZKWPGI\nRJk6liRKwhwxzAf2uvub7n4MeBi4vN8+XwN+5u77Adz9dyHGIxJZWt9BoiTMrqSpwL607f3Auf32\nmQmMMLPNwFigzd3vDzEmkUjS+g4SJWEmhiBtRCOAzwJfBE4EnjGzX7n7nhDjEomk5ubmAV/2iUQi\nZ1FaiUHCEmZiOABMT9ueTnLUkG4f8Dt3/wj4yMyeAs4GBiSG1tbWvufxeJx4PF7icEWiR0VpKUR3\ndzfd3d1DPk5o9zGY2QnAayRHA28DzwFL+xWf/5hkgToBjAKeBZa4+65+x9J9DFKXNPGeDEXk7mNw\n9+PA1cATwC7g/7j7bjNbYWYrUvu8CnQBr5BMCvf0Twoi9UzTaEgl6M5nkYjr7OzUNBpSlGJHDEoM\nIlVK02jIYCJ3KUlEwqVpNCQsSgwiVUodSxIWJQaRKqVpNCQsSgwiVUodSxKWQW9wM7MvAC+5+yEz\n+wvgHJJTV/xb6NGJSE5a+EfCMmhXkpntAOamHj8F1gGL3b0x9Oj+EIO6kkQKoI4lgXC7ko6nvpW/\nDPzI3X9EcsI7EYkodSzJUASZK+kDM7sRWAYsTK2zMCLcsERkKNSxJEMRZMSwBDgCXOnu/05yOu27\nQ41KRIZEHUsyFIMmBnf/DfD3wAQz+xJw2N3/LvTIRKRo6liSoQhSfF5McoSwJfXSBcB17v4PIceW\nHoOKzyIF0hxLEtpcSWb2CnCRu/82tT0Z+IW7zy0q0iIoMYiUjjqW6keYXUkGvJu2fTD1mohUIXUs\nyWCCdCV1AU+Y2YMkE8IS4J9DjUpEQqOOJRlMkMTw18BXgS+QXMd5rbs/GmpUIhIadSzJYAZNDKmL\n+z9LPUSkyrW0tNDT0zOgxqCOJemVMzGY2SGSI4Rs3N3HhROSiIQp3xxL6lYSyJMY3P0kADP7H8Db\nwAOpt74O/FH4oYlIWJqbmwd84WfrVup9ruRQXwK1q/ZvTc32WpjUrioSvkQiwaZNm7K+3tXVVYGI\nZKjCbFf90MyWmdnw1OPrwKHCQxSRKFO3kvQKkhi+BiwG3kk9FqdeE5Eaom4l6RWkK+kN4LIyxCIi\nFaRuJekVZAW30cC3gLOAvl8d3P3KEOMSkTIbbEU4qR9Bis8bgN0ku5FuI7kuw253bwk/vL4YVHwW\nqTC1slafYovPQe58nuHuf25ml7v7fampMX5ZeIgiUq3UylpfghSfj6b++59m9mlgAjA5vJBEJGo0\n8V59CTJi+FszOxm4CXiM5HrPN4calYhEilpZ60u+KTH+a9rmcpIzq/4otX1iiDGJSMSolbW+5LuU\nNBY4CfgccBXJaTD+CFgBfDb80EQkKrRUaH0J0pX0NHCpu3+Q2h4LPO7uC8sQX28M6koSqTAtFVp9\nwuxKOhU4lrZ9LPWaiNSRbBPvgTqWalGQrqS/A54zs1Yzuw14Frgv3LBEpFqoY6n2BJkS43Yz6wIW\nklyfYbm7bw89MhGpCupYqj1BLiXh7i8AL4Qci4hUIXUs1Z4gl5JERHJSx1LtCTRiKJaZLQJ+AAwH\n1rn7XTn2mwc8Ayx290fCjElESktLhdaeQdtViz6w2XDgNeAi4ADwPLDU3Xdn2e/nwP8D7nX3n2U5\nltpVRapMtm6lWCxGW1ubkkOZhLmCW7HmA3vd/U13PwY8DFyeZb9VwAbg3RBjEZEyU7dS9QozMUwF\n9qVt70+91sfMppJMFmtSL2lYIFIj1K1UvcJMDEG+5H8AXJ+6TmSph4jUAHUrVa8wi88HgOlp29NJ\njhrSfQ542MwATgEuMbNj7r6x/8FaW1v7nsfjceLxeInDFZFS0lKh5dfd3U13d/eQjxNm8fkEksXn\nLwJvA8+Rpfictv+9wD9l60pS8VmkOuWbX0nCV2zxObTEAGBml/CHdtX17n6nma0AcPe1/fZVYhCp\nI2plDV8kE0OpKDGI1Ba1spZHFNtVRUSyUitrtCkxiEjZqZU12pQYRKTs1MoabUoMIlJ2mngv2kKd\nRE9EJJt8E+9J5akrSUQiR62spRHmms8iImWjNaQrTzUGEYkUtbJWnhKDiESKWlkrT4lBRCJFrayV\np8QgIpGiVtbKU/FZRCJlsFZWdSyFT+2qIlI1NPleYTSJnojUPHUslYcSg4hUDXUslYcSg4hUDXUs\nlYcSg4hUDXUslYe6kkSkamjyvfJQV5KI1AS1sQ6kSfREpG5p4r3SUo1BRKqe2lhLS4lBRKqe2lhL\nS4lBRKqe2lhLS4lBRKqe2lhLS8VnEal6amMtLbWrikjNq9dWVrWriohkoVbWwqnGICI1Ta2shVNi\nEJGaplbWwikxiEhNUytr4ZQYRKSmqZW1cCo+i0hNUytr4dSuKiJ1rZZbWdWuKiJSILWyZqcag4jU\nLbWyZqfEICJ1S62s2YWeGMxskZm9amZ7zOx7Wd7/upm9bGavmNlWM5sbdkwiIqBW1lxCTQxmNhz4\nIbAIOAtYamaz++32r8AF7j4X+O/A34YZk4hIL7WyZhd28Xk+sNfd3wQws4eBy4HdvTu4+zNp+z8L\nTAs5JhERQK2suYSdGKYC+9K29wPn5tn/W8DjoUYkIpKmubk5ayKo5TbWwYSdGALffGBmfwpcCSzI\n9n5ra2vf83g8TjweH2JoIiLZVWsba3d3N93d3UM+Tqg3uJnZeUCruy9Kbd8AfOzud/Xbby7wCLDI\n3fdmOY5ucBORskkkEmzatCnr611dXRWIqDjF3uAWdlfSNmCmmZ1uZiOBJcDG9B3M7JMkk8KybElB\nRKTc6r2NNdRLSe5+3MyuBp4AhgPr3X23ma1Ivb8WuAWYCKwxM4Bj7j4/zLhERPKp9zZWzZUkItJP\nthpDLBajra0t0jWG/jRXkohIidR7G6tGDCIiBaqWVlaNGEREyqBaW1kLoUn0REQKUA8zsioxiIgU\noB5aWZUYREQKUA+trEoMIiIFqIcZWdWVJCIlkbpBVSog1/ejupJEpOL0C1z5hZGQdSlJREQyKDGI\niEgGJQYREcmgxCAiIhmUGEREsmhtbWXmzJlDOsby5cu5+OKLSxRR+SgxiIjkUIqOn2ps41ViEBHJ\noRTtt9XYwqvEICJl0dnZSSKRIB6Pk0gk6OzsjMzxDh8+zFVXXcWECRM4+eSTWblyZcacSC+++CKX\nXHIJU6ZMYezYscyfP58nnngi4xi///3vWbJkCSeddBKnnXYaN99884CkcOzYMa6//nqmTZvGqFGj\nmDNnDg899FDGPuvWrWP27NmMHj2aSZMm0djYyIEDB4r+uxXF3SP/SIYpIlGW7zzt6OjwWCzmQN8j\nFot5R0dHUT+r1Mf77ne/66eeeqpv3LjRX3vtNb/22mt93LhxPnPmTHd37+7u9vvuu8937drle/bs\n8ZtuuslHjhzpr7/+et8xvvzlL/vMmTN98+bNvnPnTl+2bJmPGzfOL7744r59rr32Wp80aZJv2LDB\n9+zZ43fccYcPGzbMf/GLX7i7+7Zt2/yEE07w+++/39966y3fsWOHr1+/3vfv358z9nyfe+q9wr9z\ni/lD5X4oMYhEX77ztKmpKeNLvPeRSCSK+lmlPN6hQ4e8oaHB161bl/H65z//+b7EkM3ZZ5/tt99+\nu7u779mzx83Mn3zyyb73jx496lOnTu1LDB9++KGPGjXK16xZk3Gcr3zlK37hhRe6u/sjjzzi48eP\n9/fffz9w/GEkBl1KEpHQlXqq6lIer6enhyNHjnD++ednvL5gwYK+S0HvvvsuK1euZPbs2UycOJGx\nY8eyc+dO3nrrLQB27doFkHGMESNGMG/evL7tvXv3cvToUS644IKMn3PBBRewc+dOAJqamvjUpz7F\nGWecwdKlS7nnnns4ePBgwX+noVJiEJHQlXqq6nJNfd3bUbR8+XK2bt3K3XffzS9/+UteeuklPvOZ\nz3D06NG8f743sQQ1ZswYtm3bxqOPPsqsWbP48Y9/zIwZM3jxxReL/jsUQ4lBREJX6qmqS3m8WCzG\nyJEj2bp1a8br6dtPP/00K1eu5Etf+hJz5szhtNNOy1jF7ayzzhrwZ44ePcrzzz/ftz1jxgxGjRrF\nli1bMn7Oli1b+PSnP923PWzYMBYuXMhtt93GCy+8wCc+8QkefPDBgv9eQ6HZVUUkdL1rIa9evZrD\nhw/T0NDAqlWril4juZTHGzNmDN/+9re56aabmDJlCrNmzWL9+vW8/vrrTJkyBYAzzzyTBx54gAUL\nFnD8+HFuueUWPv74474RwYwZM7jsssv4zne+w9q1azn11FP5/ve/z6FDh/r2OfHEE2lpaeHmm29m\n8uTJzJ07lw0bNrBx40aefPJJAB577DHeeOMNFi5cyOTJk3nhhRfYt28fc+bMKepzKloxhYlyP1Dx\nWSTyqvk8/eijj3zFihU+fvx4Hz9+vK9YscJvuOGGvuLzjh07/Pzzz/fRo0f7GWec4WvWrPGLLrrI\nr7jiir5jHDx40BcvXuxjxozxyZMn+4033ujf/OY3M7qSjh075tdff71PnTrVR44c6XPmzPGHHnqo\n7/2nnnrKL7zwQp88ebI3NDT4rFmz/K677sobe77PnSKLz1qoR0RKIrUoTKXDqDv5PvdiF+pRjUFE\nRDIoMYiISAYlBhERyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMSgwiIpJBU2KISMlU4zKWMpBGDCJS\nEsVMvaBH/kdTU1PWzzqRSPSfNqikQk0MZrbIzF41sz1m9r0c+7Sn3n/ZzM4JMx4RkWpS6llpgwot\nMZjZcOCHwCLgLGCpmc3ut8+lwAx3nwn8FbAmrHjKobu7u9IhBKI4S6caYgTFWWrlirO5uZm2tjYS\niQSNjY0kEgna2tqKnpU2qDBHDPOBve7+prsfAx4GLu+3z2XAfQDu/iwwwcymhBhTqPQ/dWlVQ5zV\nECMozlIrZ5zNzc10dXXR3d1NV1dXRlLo7OwkkUgQj8dJJBJ0dnaW5GeGWXyeCuxL294PnBtgn2nA\nOyHGJSJS9To7O7nmmmsyFgzqfT7UEUWYI4agFZH+bQyat1dEZBDt7e0ZSQGSiWH16tVDPnZo6zGY\n2XlAq7svSm3fAHzs7nel7fNjoNvdH05tvwo0uvs7/Y6lZCEiUoRi1mMI81LSNmCmmZ0OvA0sAZb2\n22cjcDXwcCqR/Ef/pADF/cVERKQ4oSUGdz9uZlcDTwDDgfXuvtvMVqTeX+vuj5vZpWa2F/gQuCKs\neEREJJiqWNpTRETKJ1J3PlfLDXGDxWlmX0/F94qZbTWzuVGLMW2/eWZ23My+Ws740n5+kH/zuJlt\nN7Nfm1l3mUPsjWGwf/NTzKzLzF5Kxbm8AjH+xMzeMbMdefaJwvmTN84onD+pOAb9PFP7VfocCvLv\nXtg5VOlbvtNu6R4O7AVOB0YALwGz++1zKfB46vm5wK8iGuefAONTzxeVO84gMabt9y9AB/BnEf0s\nJwA7gWmp7VMiGmcrcGdvjMBB4IQyx7kQOAfYkeP9ip8/AeOs6PkTNM60/zcqdg4F/DwLPoeiNGKo\nlhviBo3T3Z9x9/9MbT5L8t6MSMWYsgrYALxbzuDSBInza8DP3H0/gLv/rswxQrA4fwOMSz0fBxx0\n9+NljBF3fxp4L88uUTh/Bo0zAudPbxyDfZ5Q+XMoSJwFn0NRSgzZbnabGmCfcv9PEyTOdN8CHg81\nooEGjdHMppL8cuudhqQSxaYgn+VM4GQz22xm28zsL8oW3R8EifMeYI6ZvQ28DFxTptgKEYXzp1CV\nOH8Cicg5FETB51CUpt2ulhviAv88M/tT4EpgQXjhZBUkxh8A17u7W3Ku5Eq0BAeJcwTwWeCLwInA\nM2b2K3ffE2pkmYLEeSPwkrvHzSwG/NzMznb3D0KOrVCVPn8Cq+D5E1QUzqEgCj6HopQYDgDT07an\nk/yNJt8+01KvlVOQOEkVzO4BFrn7YMPRUgsS4+dI3j8CyWvil5jZMXffWJ4QgWBx7gN+5+4fAR+Z\n2VPA2UA5E0OQOM8Hbgdw9x4zewM4k+T9PFERhfMnkAqfP0FF4RwKovBzqBLFkhwFkhOAHpIFvpEM\nXnw+j8oUn4PE+UmSxcrzovpZ9tv/XuCrUYwT+GPgSZJFvhOBHcBZEYzzfwO3pp5PIZk4Tq7AZ3o6\nwYrPFTl/AsZZ0fMnaJz99qvIORTw8yz4HIrMiMGr5Ia4IHECtwATgTWp3yaOufv8iMVYcQH/zV81\nsy7gFeBj4B533xW1OIE7gHvN7GWStbu/dvfflzNOM3sIaAROMbN9wK0kLyNE5vwJEicVPn8KiDMS\nAvy7F3wO6QY3ERHJEKWuJBERiQAlBhERyaDEICIiGZQYREQkgxKDiIhkUGIQEZEMSgxSl8xsvJld\nVek4RKJIiUHq1URgZaWDEIkiJQapV98HYqnFS/6nmV1rZs+lFohpBTCz01OL89xrZq+Z2d+bWVNq\n8ZjXzWxear9WM7vfzP5v6vW/TL1uZna3me1ILTqzOPX6J8zsqdTP3mFmX6jUhyCSTWSmxBAps+8B\nc9z9HDNrIrnIynwzGwY8ZmYLSU4+FgP+DNgFPA8scfcFZnYZyRlVv5I63n8hOf/QScB2M+skObHe\n2cBcYDLwfGoCs68BXe5+R2pWzjFl+juLBKLEIPUqfYrkJqDJzLantscAM0gmhjfcfSeAme0kORkZ\nwK9JTlwGyamrH3P3I8ARM9tMcnGfBcCDnpx35rdmtgWYBzwH/MTMRgD/6O4vh/R3FCmKLiWJJN3p\n7uekHrPc/d7U60fS9vkYOJr2PN8vVr2TkA1Y/8CTK24tJDnl9U8rtPiQSE5KDFKvPgDGpp5vAq40\nszGQXJnLzCYXcCwDLjezUWY2CYiTHBU8DSwxs2Gp410APGdmnwTedfd1wDqS6/WKRIYuJUldcveD\nqSLyDuCfgQdJrmwFyaSxjORv/f2nH/Ysz53klMabSS7Y8t/c/d+BR83sT0gu9enAde7+WzP7BnCd\nmR1L/axvhPF3FCmWpt0WGSIzuxU45O5/U+lYREpBl5JESkO/YUnN0IhBREQyaMQgIiIZlBhERCSD\nEoOIiGRQYhARkQxKDCIikkGJQUREMvx/z40EZFjSnpAAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x56bf470>"
+       "<matplotlib.figure.Figure at 0x4e7f438>"
       ]
      },
      "metadata": {},
@@ -239,7 +239,7 @@
     "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
     "print(int_verdadeira)\n",
     "# Calculamos o erro cometido e o imprimimos\n",
-    "erro = int_verdadeira - integral\n",
+    "erro = abs(int_verdadeira - integral)\n",
     "print(erro)"
    ]
   },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
     "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
     "print(int_verdadeira)\n",
     "# Calculamos o erro cometido e o imprimimos\n",
-    "erro2 = int_verdadeira - int_trapezios\n",
+    "erro2 = abs(int_verdadeira - int_trapezios)\n",
     "print(erro2)"
    ]
   },
@@ -413,12 +413,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08472669439144243, 0.04076710504024694, 0.026838192538866545, 0.02000322554546985, 0.015942894513249595, 0.013252764278358642, 0.01133939398026107, 0.009908802562918373, 0.008798739896037189, 0.007912335532624493, 0.007188181326510001, 0.006585464592107515, 0.006076001791466945, 0.005639704338090912, 0.005261866997297915, 0.004931477824744457, 0.00464012718601392, 0.004381281927089864, 0.004149789644384727, 0.003941532222524913, 0.0037531787092357494, 0.0035820058140871858, 0.003425765383925139, 0.0032825851113538196, 0.0031508931435171306, 0.00302936013827515, 0.002916854231957311, 0.002812405682364627, 0.0027151788455872516, 0.002624449771287951, 0.0025395881446874657, 0.0024600426222463057, 0.002385328839545453, 0.0023150195400298834, 0.002248736399519391, 0.002186143216111658, 0.0021269402066179666, 0.002070859205313358, 0.002017659602748134, 0.0019671248948440745, 0.001919059737929718, 0.0018732874252089804, 0.001829647715961169, 0.0017879949612613633, 0.0017481964800041272, 0.0017101311470930636, 0.0016736881621590705, 0.001638765972393319, 0.0016052713275171993, 0.0015731184482929983, 0.0015422282929991038, 0.001512527908693384, 0.0014839498559844344, 0.0014564316978245007, 0.001429915544138849, 0.0014043476453098336, 0.0013796780285129095, 0.0013558601717069685, 0.0013328507108496535, 0.0013106091763768202, 0.001289097755690749, 0.0012682810786124321, 0.001248126023331686, 0.0012286015405329476, 0.0012096784937973837, 0.001191329514533157, 0.00117352886988642, 0.0011562523423513937, 0.001139477119834087, 0.0011231816951644547, 0.0011073457741077597, 0.0010919501910349183, 0.0010769768315612716, 0.0010624085614296952, 0.0010482291611084715, 0.0010344232655581376, 0.0010209763086852508, 0.0010078744720840582, 0.000995104637673272, 0.0009826543438724578, 0.0009705117450597989, 0.0009586655739541872, 0.0009471051067757585, 0.0009358201308382608, 0.0009248009144748881, 0.000914038179040455, 0.0009035230728580146, 0.000893247146939613, 0.000883202332331301, 0.000873380919010236, 0.0008637755361164956, 0.0008543791335293704, 0.0008451849645925158, 0.0008361865699726412, 0.0008273777625134038, 0.0008187526130580824, 0.0008103054371442209, 0.0008020307824871953, 0.0007939234172813503, 0.0007859783191270786]\n",
+      "[0.0025397682082739514, 0.0005696404017235812, 0.00024450275070098115, 0.00013518890061958722, 8.563943363615323e-05, 5.906899956464873e-05, 4.318809796322043e-05, 3.2946340847384015e-05, 2.5958569102924045e-05, 2.097924916821814e-05, 1.730641107877684e-05, 1.4519974258386803e-05, 1.2356064327923022e-05, 1.0642161172191855e-05, 9.261616108480197e-06, 8.133265805509993e-06, 7.199224621223799e-06, 6.417309768913526e-06, 5.7561936984695805e-06, 5.19221665795655e-06, 4.707240033874349e-06, 4.287169464101126e-06, 3.920919118161059e-06, 3.5996727369980164e-06, 3.3163480390729916e-06, 3.065203029617436e-06, 2.8415427526518044e-06, 2.64149827100546e-06, 2.4618582105118136e-06, 2.2999390721922808e-06, 2.1534844303339185e-06, 2.0205858975996804e-06, 1.8996206281318706e-06, 1.7892015556908447e-06, 1.6881374336197297e-06, 1.5954005947449446e-06, 1.5101006933804229e-06, 1.4314632825751517e-06, 1.3588121562380095e-06, 1.291554773241721e-06, 1.2291701320110704e-06, 1.171198651950256e-06, 1.1172336837894647e-06, 1.0669143597485942e-06, 1.0199195472626599e-06, 9.759627047634112e-07, 9.347875190579558e-07, 8.961641337901227e-07, 8.59885970094787e-07, 8.257669369404752e-07, 7.93639020613135e-07, 7.633502623338728e-07, 7.347629129572653e-07, 7.077518909825997e-07, 6.822033968845176e-07, 6.580137235090433e-07, 6.350881811556519e-07, 6.133402044028458e-07, 5.926905050079867e-07, 5.730663554803783e-07, 5.54400957031298e-07, 5.366328507117046e-07, 5.197054373518029e-07, 5.03566507381592e-07, 4.881678302703918e-07, 4.73464828565362e-07, 4.5941620574474484e-07, 4.459837127379629e-07, 4.331318301797893e-07, 4.2082757867323295e-07, 4.0904027720500835e-07, 3.977413686184761e-07, 3.869042399795575e-07, 3.765040581527046e-07, 3.665176594447317e-07, 3.5692337230219806e-07, 3.477009340446813e-07, 3.388313792873632e-07, 3.302969231455677e-07, 3.2208090317009663e-07, 3.1416767121150713e-07, 3.065425270287747e-07, 2.991916517869342e-07, 2.9210205620966434e-07, 2.8526149453700356e-07, 2.786584408775994e-07, 2.7228202958973213e-07, 2.661220042110557e-07, 2.601686769354572e-07, 2.5441291007233247e-07, 2.4884605476227506e-07, 2.434599375433777e-07, 2.3824681072426301e-07, 2.3319935638088651e-07, 2.2831061619044135e-07, 2.2357400797368143e-07, 2.1898329161107455e-07, 2.1453252352365837e-07, 2.1021608442861606e-07, 2.0602861572349696e-07]\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
+    "erros_ret = []\n",
+    "erros_trap = []\n",
+    "inicio = 0\n",
+    "fim = math.pi/2\n",
+    "# Retangulo\n",
+    "lista_N = range(10, 1010, 10)\n",
+    "for N in lista_N:\n",
+    "    intervalo = (fim - inicio)/(N - 1)\n",
+    "    tempos = []\n",
+    "    dados = []\n",
+    "    for i in range(0, N):\n",
+    "        t = inicio + i*intervalo\n",
+    "        tempos.append(t)\n",
+    "        dados.append(math.cos(t))\n",
+    "    soma = 0 \n",
+    "    for dado in dados:\n",
+    "        soma = soma + dado\n",
+    "    integral_ret = soma*intervalo\n",
+    "    erro = abs(int_verdadeira - integral_ret)\n",
+    "    erros_ret.append(erro)\n",
+    "print(erros_ret)\n",
+    "\n",
+    "# Trapezio    \n",
+    "lista_N = range(10, 1010, 10)\n",
+    "for N in lista_N:\n",
+    "    intervalo = (fim - inicio)/(N - 1)\n",
+    "    tempos = []\n",
+    "    dados = []\n",
+    "    for i in range(0, N):\n",
+    "        t = inicio + i*intervalo\n",
+    "        tempos.append(t)\n",
+    "        dados.append(math.cos(t))    \n",
+    "    soma2 = 0\n",
+    "    for i in range(0, N - 1):\n",
+    "        soma2 = soma2 + dados[i] + dados[i+1]\n",
+    "    integral_trap = (soma2*intervalo)/2\n",
+    "    erro2 = abs(int_verdadeira - integral_trap)\n",
+    "    erros_trap.append(erro2)\n",
+    "print(erros_trap)\n",
+    "\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
