Adicionamos os comentários da comparação dos dois métodos e respondemos a respectiva pergunta

--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -428,12 +428,13 @@
     }
    ],
    "source": [
+    "# Calculamos a integral verdadeira, criamos duas listas vazias para guardar os erros calculados para cada regra e definimos o intervalo de variação da função\n",
     "int_verdadeira = math.sin(math.pi/2) - math.sin(0)\n",
     "erros_ret = []\n",
     "erros_trap = []\n",
     "inicio = 0\n",
     "fim = math.pi/2\n",
-    "# Retangulo\n",
+    "# Para cada valor de N, geramos as listas com os dados, integramos pela regra dos retângulos, calculamos os erro, guardamos esses erros na lista erros_ret e imprimimos essa lista\n",
     "lista_N = range(10, 1010, 10)\n",
     "for N in lista_N:\n",
     "    intervalo = (fim - inicio)/(N - 1)\n",
@@ -450,8 +451,7 @@
     "    erro = abs(int_verdadeira - integral_ret)\n",
     "    erros_ret.append(erro)\n",
     "print(erros_ret)\n",
-    "\n",
-    "# Trapezio    \n",
+    "# Para cada valor de N, geramos as listas com os dados, integramos pela regra dos trapézios, calculamos os erro, guardamos esses erros na lista erros_trap e imprimimos essa lista    \n",
     "lista_N = range(10, 1010, 10)\n",
     "for N in lista_N:\n",
     "    intervalo = (fim - inicio)/(N - 1)\n",
@@ -491,7 +491,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O erro diminui logaritimicamente a medida que se aumenta o N. Não, porque essa diminuição é logarítmica. Não, porque como a escala é logarítmica a partir de um certo valor de N a diminuição do erro com o aumento de N é quase desprezível, mas para valores menores de N essa diminuição do erro é considerável."
+   ]
   },
   {
    "cell_type": "markdown",
